minor update to documentation

--- a/bpc_interactive_mne.ipynb
+++ b/bpc_interactive_mne.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "This project was supported by the National Institute Of Mental Health of the National Institutes of Health under Award Number R01MH122258. The content is solely the responsibility of the authors and does not necessarily represent the official views of the National Institutes of Health.\n",
     "\n",
-    "This Jupyter Notebook was written by Alex Rockhill, Tal Pal Attia, Harvey Huang and Dora Hermes."
+    "This Jupyter Notebook was written by Alex Rockhill, Tal Pal Attia, Harvey Huang, Max vd Boom and Dora Hermes."
    ]
   },
   {
@@ -25,9 +25,9 @@
     "\n",
     "This notebook will walk you through the following five steps to compute and visualize Basis Profile Curves (BPCs) in an interactive manner:\n",
     "1. Python packages\n",
-    "2. Loading and checking the BIDS data and metadata\n",
-    "3. Calculating BPCs \n",
-    "4. Visualizing BPCs\n"
+    "2. Load BIDS data and metadata using MNE, and look at stimulation driven inputs to 1 electrode\n",
+    "3. Group these inputs into Basis Profile Curves (BPCs)\n",
+    "4. Visualize the BPCs\n"
    ]
   },
   {
@@ -35,8 +35,8 @@
    "metadata": {},
    "source": [
     "# 1. Python packages\n",
-    "This notebook depends on the following Python packages: \n",
     "\n",
+    "Dependencies:\n",
     " - [MNE](https://mne.tools/stable/index.html)\n",
     " - [MNE-BIDS](https://mne.tools/mne-bids/stable/index.html)\n",
     " - [openneuro-py](https://pypi.org/project/openneuro-py/)\n",
@@ -191,15 +191,6 @@
     "        ax.text(*pos, name, ha='center', va='center', fontsize=8)\n",
     "\n",
     "fig.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(path.update(suffix='events'))"
    ]
   },
   {
