clarify path to derived/preprocessed dataset

--- a/bpc_interactive_mne.ipynb
+++ b/bpc_interactive_mne.ipynb
@@ -101,7 +101,11 @@
    "source": [
     "# If you already downloaded the data, you can just set the root path to the BIDS directory\n",
     "\n",
-    "root = Path('/full/path/to/Basis_profile_curve/data') # '/full/path/to/Basis_profile_curve/data'"
+    "\"\"\"\n",
+    "# The preprocessed Brainvision data are located in /derivatives/preprocessed/\n",
+    "\"\"\"\n",
+    "\n",
+    "root = Path('ds003708-download/derivatives/preprocessed/') # '/full/path/to/Basis_profile_curve/data'"
    ]
   },
   {
