Fix missing images cell

--- a/bpc_interactive.ipynb
+++ b/bpc_interactive.ipynb
@@ -43,10 +43,11 @@
     "https://openneuro.org/datasets/ds003708\n",
     "\n",
     "## 1.1 Setting up the environment\n",
-    "This notebook requires the following Python packages to be installed: [bpc-requirements.txt](./bpc-requirements.txt) \n",
+    "This notebook requires the following Python packages to be installed: [bpc-requirements.txt](./bpc-requirements.txt)\n",
+	"To ensure all requirements are installed run 'pip install -r bpc-requirements.txt'\n",
     "\n",
     "\n",
-    "To easy setup an enviroment for this toturial use this file:  [bpc-dev-env.sh](./bpc-dev-env.sh) \\\n",
+    "To easy setup an enviroment on a Mac or Linux use this file:  [bpc-dev-env.sh](./bpc-dev-env.sh) \\\n",
     "Run from terminal: <code>bash bpc-dev-env.sh</code> \\\n",
     "or from this notebook: <code>!bash bpc-dev-env.sh</code>\n",
     "\n",
@@ -67,19 +68,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.1 Check whether the environment is setup\n",
-    "Verify the kernel on the top right states bpc -\n",
-    "\n",
-    "![image.png](attachment:image.png)\n",
-    "\n",
-    "You may have to refresh the browser window.\n",
-    "\n",
-    "Then, go to kernel, change kernel and select bpc - \n",
-    "\n",
-    "![image-2.png](attachment:image-2.png)\n",
-    "\n",
-    "\n",
-    "\n",
     "## 1.2 Importing python packages\n",
     "\n",
     "We use several Python packages, and the following allow us to work with the BIDS dataset in this notebook:\n",
