Remove unit conversion multiply

--- a/bpc_interactive.ipynb
+++ b/bpc_interactive.ipynb
@@ -344,9 +344,6 @@
     "\n",
     "reader = IeegDataReader(mefName, preload_data=False)\n",
     "\n",
-    "# To obtain information about time series channels we can use the Pymef function read_ts_channel_basic_info()\n",
-    "# ms.read_ts_channel_basic_info()\n",
-    "\n",
     "print('Sampling frequency is', srate, 'Hz')"
    ]
   },
@@ -382,8 +379,7 @@
     "    samples = [row.onset * srate + element * srate for element in epoch_limits]  # get start and end samples\n",
     "    # Read mef3 data\n",
     "    for channel in df_electrodes.name:\n",
-    "        # pyMef does not apply unit conversion to microVolt, apply Natus conversion factor 0.2658 here after pyMef\n",
-    "        data = 0.2658 * reader.retrieve_sample_range_data(sample_start=samples[0], sample_end=samples[1], channels=channel)[0]  # Returns 1D numpy array with data from sample X to sample Y\n",
+    "        data = reader.retrieve_sample_range_data(sample_start=samples[0], sample_end=samples[1], channels=channel)[0]  # Returns 1D numpy array with data from sample X to sample Y\n",
     "        curr_channel = pd.DataFrame({'channel': channel, 'data': [data]})\n",
     "        df_data = pd.concat([df_data, curr_channel], ignore_index=True)  # append to mef3 data dataframe\n",
     "    \n",
